test/objects/Account/fields/Nature_Juridique__c.field-meta.xml
<CustomField>
    <fullName>Nature_Juridique__c</fullName>
    <label>Nature Juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nature_juridique</valueSetName>
    </valueSet>
</CustomField>