test/objects/Account/fields/Numero_de_compte__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_compte__c</fullName>
    <displayFormat>CU{0000}</displayFormat>
    <label>Numero de compte</label>
    <type>AutoNumber</type>
</CustomField>