test/objects/Account/fields/Secteur_d_activit__c.field-meta.xml
<CustomField>
    <fullName>Secteur_d_activit__c</fullName>
    <label>Secteur d&apos;activité</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nature_Juridique__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Secteur_d_activit</valueSetName>
    </valueSet>
</CustomField>