test/objects/Account/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Renseignez le nom du compte</errorMessage>
</ValidationRule>