test/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Nature_Juridique__c</columns>
    <columns>Secteur_d_activit__c</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>